--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
 				Download
 			</h2>
 			<div class="l-topic_content">
-				<!-- @TODO: add download links | inkwai @ 02.06.13 -->
 				<p class="l-topic_paragraph">
-					Working on it. We really do.
+					<a href="_files/lime-src-nightly-02.06.2013.zip" class="l-link">Source snapshot</a>(46Mb, 02.06.2013, MD5: 123cb61a1cdd0553161ebab77c036366)
 				</p>
 			</div>
 		</div>
