Added tesselation feature

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 						<li class="l-features_feature">Terrains</li>
 						<li class="l-features_feature">Particles</li>
 						<li class="l-features_feature">Post-processing</li>
+						<li class="l-features_feature">Tesselation</li>
 						<li class="l-features_feature">
 							Lighting
 							<ul class="l-features_list l-features_list__sublist">
