Added jQuery CDN.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Lime</title>
 
 	<link rel="stylesheet" href="_css/style.css">
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="l-wrapper">
