--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<title>Lime</title>
 
 	<link rel="stylesheet" href="_css/style.css">
+	<link rel="stylesheet" href="/_css/fotorama.css">
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+	<script src="/_js/fotorama/fotorama.js"></script>
 </head>
 <body>
 <div class="l-wrapper">
