--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<title>Lime</title>
 
+	<link rel="stylesheet" href="_css/fotorama.css">
 	<link rel="stylesheet" href="_css/style.css">
-	<link rel="stylesheet" href="/_css/fotorama.css">
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<script src="/_js/fotorama/fotorama.js"></script>
+	<script src="_js/fotorama/fotorama.js"></script>
 </head>
 <body>
 <div class="l-wrapper">
@@ -135,10 +135,12 @@
 				Screenshots
 			</h2>
 			<div class="l-topic_content">
-				<!-- @TODO: add screenshots and a gallery plug-in | inkwai @ 02.06.13 -->
-				<p class="l-topic_paragraph">
-					Working on it. We really do.
-				</p>
+				<div class="fotorama" data-width="680">
+					<img src="_img/screenshots/deferred_shading.png" alt="Deferred shading">
+					<img src="_img/screenshots/grass.png" alt="Grass">
+					<img src="_img/screenshots/tesselation.png" alt="Tesselation">
+					<img src="_img/screenshots/xml_scene.png" alt="XML scene">
+				</div>
 			</div>
 		</div>
 
