--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 					<img src="_img/screenshots/grass.png" alt="Grass">
 					<img src="_img/screenshots/tesselation.png" alt="Tesselation">
 					<img src="_img/screenshots/xml_scene.png" alt="XML scene">
+					<img src="_img/screenshots/fire.png" alt="Fire rendering">
 				</div>
 			</div>
 		</div>
