--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			</h2>
 			<div class="l-topic_content">
 				<p class="l-topic_paragraph">
-					<a href="_files/lime-src-latest.zip" class="l-link">Latest source snapshot</a>
+					<a href="_files/lime-src-latest.zip" class="l-link">Latest source snapshot</a> <br />
 					<a href="_files/lime-src-nightly-02.07.2013.zip" class="l-link">Stable source snapshot</a>(46Mb, 02.07.2013, MD5: a7abd1619e05a14816638099300e2f05)
 				</p>
 			</div>
