--- a/index.html
+++ b/index.html
@@ -12,48 +12,35 @@
 </head>
 <body>
 <div class="l-wrapper">
-	<div class="l-sidebar">
-		<div class="l-header">
-			<h1 class="l-headlink">
-				<a class="l-home-link" href="index.html">
-					<img class="l-logo" src="_img/logo.png" alt="LIME" title="Go home!">
-				</a>
-			</h1>
-			<ul class="l-navigation">
-				<li class="l-navigation_item">
-					<a href="#about" class="l-navigation_link">About</a>
-				</li>
-				<li class="l-navigation_item">
-					<a href="#features" class="l-navigation_link">Features</a>
-				</li>
-				<li class="l-navigation_item">
-					<a href="#screenshots" class="l-navigation_link">Screenshots</a>
-				</li>
-				<li class="l-navigation_item">
-					<a href="#documentation" class="l-navigation_link">Documentation</a>
-				</li>
-				<li class="l-navigation_item">
-					<a href="#download" class="l-navigation_link">Download</a>
-				</li>
-				<li class="l-navigation_item">
-					<a href="#licensing" class="l-navigation_link">Licensing</a>
-				</li>
-				<li class="l-navigation_item">
-					<a href="#contact" class="l-navigation_link">Contact</a>
-				</li>
-			</ul>
-		</div>
-		<div class="l-footer">
-			2013 ©
-			<ul class="l-people">
-				<li class="l-person">
-					Kirill Bazhenov (Lime engine)
-				</li>
-				<li class="l-person">
-					Anton inkwai Pryschepa (site)
-				</li>
-			</ul>
-		</div>
+	<div class="l-header">
+		<h1 class="l-headlink">
+			<a class="l-home-link" href="#">
+				<img class="l-logo" src="_img/logo.png" alt="LIME" title="Go home!">
+			</a>
+		</h1>
+		<ul class="l-navigation">
+			<li class="l-navigation_item">
+				<a href="#about" class="l-navigation_link">About</a>
+			</li>
+			<li class="l-navigation_item">
+				<a href="#features" class="l-navigation_link">Features</a>
+			</li>
+			<li class="l-navigation_item">
+				<a href="#screenshots" class="l-navigation_link">Screenshots</a>
+			</li>
+			<li class="l-navigation_item">
+				<a href="#documentation" class="l-navigation_link">Documentation</a>
+			</li>
+			<li class="l-navigation_item">
+				<a href="#download" class="l-navigation_link">Download</a>
+			</li>
+			<li class="l-navigation_item">
+				<a href="#licensing" class="l-navigation_link">Licensing</a>
+			</li>
+			<li class="l-navigation_item">
+				<a href="#contact" class="l-navigation_link">Contact</a>
+			</li>
+		</ul>
 	</div>
 	<div class="l-content">
 		<div class="l-topic" id="about">
@@ -97,6 +84,17 @@
 						<li class="l-features_feature">Automatic memory and resource management</li>
 					</ul>
 				</div>
+
+				<div class="l-features_block">
+					<h3 class="l-features_subheader">
+						Tools
+					</h3>
+					<ul class="l-features_list">
+						<li class="l-features_feature">Several mesh utilities</li>
+						<li class="l-features_feature">Scene editor</li>
+					</ul>
+				</div>
+
 				<div class="l-features_block">
 					<h3 class="l-features_subheader">
 						Renderer
@@ -115,16 +113,6 @@
 							</ul>
 						</li>
 						<li class="l-features_feature">No fixed pipeline</li>
-					</ul>
-				</div>
-
-				<div class="l-features_block">
-					<h3 class="l-features_subheader">
-						Tools
-					</h3>
-					<ul class="l-features_list">
-						<li class="l-features_feature">Several mesh utilities</li>
-						<li class="l-features_feature">Scene editor</li>
 					</ul>
 				</div>
 			</div>
@@ -200,6 +188,18 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+<div class="l-footer">
+	2013 ©
+	<ul class="l-people">
+		<li class="l-person">
+			Kirill Bazhenov (Lime engine)
+		</li>
+		<li class="l-person">
+			Anton inkwai Pryschepa (site)
+		</li>
+	</ul>
 </div>
 </body>
 </html>
