--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 						<li class="l-features_feature">Particles</li>
 						<li class="l-features_feature">Post-processing</li>
 						<li class="l-features_feature">Tessellation</li>
+						<li class="l-features_feature">Shadow mapping</li>
 						<li class="l-features_feature">
 							Lighting
 							<ul class="l-features_list l-features_list__sublist">
@@ -125,6 +126,7 @@
 			<div class="l-topic_content">
 				<div class="fotorama" data-width="680">
 					<img src="_img/screenshots/deferred_shading.png" alt="Deferred shading">
+					<img src="_img/screenshots/shadow_maps.png" alt="Shadow mapping">
 					<img src="_img/screenshots/grass.png" alt="Grass">
 					<img src="_img/screenshots/tesselation.png" alt="Tesselation">
 					<img src="_img/screenshots/xml_scene.png" alt="XML scene">
