--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 					<img src="_img/screenshots/deferred_shading.png" alt="Deferred shading">
 					<img src="_img/screenshots/shadow_maps.png" alt="Shadow mapping">
 					<img src="_img/screenshots/grass.png" alt="Grass">
+					<img src="_img/screenshots/hude_terrain.png" alt="Huge terrain">
 					<img src="_img/screenshots/tesselation.png" alt="Tesselation">
 					<img src="_img/screenshots/xml_scene.png" alt="XML scene">
 					<img src="_img/screenshots/fire.png" alt="Fire rendering">
